完善了swagger的一些问题
